Updating top of HTML page

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         </ul>
      </div>
         <div class="top-content">
-        <div>
+        <div class="main-text">
             <h2>This website is awesome</h2>
             <p>The website has some subtext that goes here under the main title. 
                 smaller font, and lower contrast.
             </p>
             <button>Sign up</button>
         </div>
-        <div class="img-placeholder">This is the placeholder for an image</div>
+        <div class="img-placeholder"><p>This is the placeholder for an image</p></div>
         </div> 
     </div>
     <div class="body-content">
-        <h2>Some random information</h2>
+        <h3>Some random information</h3>
         <div class="box1">This is some subtext under an image or illustration</div>
         <div class="box2">This is some subtext under an image or illustration</div>
         <div class="box3">This is some subtext under an image or illustration</div>
         <div class="box4">This is some subtext under an image or illustration</div>
     </div>
     <div class="qoute">
-        <h3>Look up at the stars and not down at your feet. 
+        <h4>Look up at the stars and not down at your feet. 
             Try to make sense of what you see, and wonder about what makes the universe exist. 
             Be curious    
-                        <span>- Stephen Hawking</span></h3>
+                        <span>- Stephen Hawking</span></h4>
     </div>
     <div class="call-to-action">
         Sign up for our product by clicking the button right over there! 
