updated html, finished body of website

--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
         <div class="img-placeholder"><p>This is the placeholder for an image</p></div>
         </div> 
     </div>
-    <div class="body-content">
-        <h3>Some random information</h3>
-        <div class="box1">This is some subtext under an image or illustration</div>
-        <div class="box2">This is some subtext under an image or illustration</div>
-        <div class="box3">This is some subtext under an image or illustration</div>
-        <div class="box4">This is some subtext under an image or illustration</div>
-    </div>
+    <div class="body">   
+        <h3>Some random information.</h3>
+        <div class="body-content">
+            <div class="text box"><div class="box 1"></div>This is some subtext under an image or illustration</div>
+            <div class="text box"><div class="box 2"></div>This is some subtext under an image or illustration</div>
+            <div class="text box"><div class="box 3"></div>This is some subtext under an image or illustration</div>
+            <div class="text box"><div class="box 4"></div>This is some subtext under an image or illustration</div>
+        </div>
+    </div>    
     <div class="qoute">
-        <h4>Look up at the stars and not down at your feet. 
+        <div class="qoute-text">Look up at the stars and not down at your feet. 
             Try to make sense of what you see, and wonder about what makes the universe exist. 
             Be curious    
-                        <span>- Stephen Hawking</span></h4>
+                        <span>  - Stephen Hawking  </span></div>
     </div>
     <div class="call-to-action">
         Sign up for our product by clicking the button right over there! 
