--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./stylesheet.css" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Cormorant+Garamond&family=Libre+Baskerville&family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
@@ -24,7 +27,7 @@
             </p>
             <button>Sign up</button>
         </div>
-        <div class="img-placeholder"><p>This is the placeholder for an image</p></div>
+        <div class="img-placeholder"><p>Img Placeholder</p></div>
         </div> 
     </div>
     <div class="body">   
@@ -40,11 +43,16 @@
         <div class="qoute-text">Look up at the stars and not down at your feet. 
             Try to make sense of what you see, and wonder about what makes the universe exist. 
             Be curious    
-                        <span>  - Stephen Hawking  </span></div>
+                        <span>  ~Stephen Hawking  </span></div>
     </div>
     <div class="call-to-action">
-        Sign up for our product by clicking the button right over there! 
-        <button>Sign Up</button>
+        <div class="txt">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for the latest information right now!</p>
+        </div>
+        <div class="sign-up">
+            <button>Sign Up</button>
+        </div>
     </div>
 </body>
 </html>
